Fix the disabled overflow

--- a/resources/sass/base/_base.sass
+++ b/resources/sass/base/_base.sass
@@ -13,5 +13,5 @@ input
     font-size: 1.025rem
 
 body
-    overflow: clip
+    overflow: auto
 
